Fix grid width and move scrollbar down

--- a/src/grid/themes/spreadsheet.css
+++ b/src/grid/themes/spreadsheet.css
@@ -48,6 +48,10 @@
   border-right: black 1px solid;
 }
 
+#grid-container.spreadsheet .hci-grid-row.even {
+  background-color: #f5f5f5;
+}
+
 #grid-container.spreadsheet .hci-grid-cell {
   border-bottom: black 1px solid;
 }
